force-app/main/default/objects/HojaEncargo__c/HojaEncargo__c.object-meta.xml
<CustomObject>
    <description>Plantilla de hoja de encargo para guardar los valores que se traspasan a la oferta en función de la tipología de contratación.</description>
    <label>Hoja de Encargo</label>
    <nameField>
        <label>Nombre de Hoja de Encargo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hojas de Encargo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>