force-app/main/default/objects/HojaEncargo__c/fields/Catalan__c.field-meta.xml
<CustomField>
    <fullName>Catalan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hoja de Encargo en Catalán</label>
    <type>Checkbox</type>
</CustomField>