force-app/main/default/objects/HojaEncargo__c/fields/CodPlantilla__c.field-meta.xml
<CustomField>
    <fullName>CodPlantilla__c</fullName>
    <description>Código asociado a la plantilla de la hoja de encargo</description>
    <label>Código de plantilla</label>
    <length>50</length>
    <type>Text</type>
</CustomField>