force-app/main/default/objects/HojaEncargo__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Campo identificador externo para realizar la carga de las hojas de encargo. También machea con un maestro de Hde suministrado via Drive por Arriaga</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>