force-app/main/default/objects/HojaEncargo__c/fields/HAbogadoDivorcio__c.field-meta.xml
<CustomField>
    <fullName>HAbogadoDivorcio__c</fullName>
    <description>Honorarios abogado divorcio mutuo acuerdo</description>
    <label>Honorarios abogado divorcio mutuo acuerd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>