force-app/main/default/objects/HojaEncargo__c/fields/HAcuerdoJudOExtra__c.field-meta.xml
<CustomField>
    <fullName>HAcuerdoJudOExtra__c</fullName>
    <label>Honorarios acuerdo judicial o extra.(€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>