force-app/main/default/objects/HojaEncargo__c/fields/HProcurador__c.field-meta.xml
<CustomField>
    <fullName>HProcurador__c</fullName>
    <label>Honorarios procurador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>