force-app/main/default/objects/HojaEncargo__c/fields/HSinCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>HSinCondenaCostas__c</fullName>
    <label>Honorarios sin condena a costas (Euros)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>