force-app/main/default/objects/HojaEncargo__c/fields/ImporteDesistimientoMaximo__c.field-meta.xml
<CustomField>
    <fullName>ImporteDesistimientoMaximo__c</fullName>
    <label>Importe desistimiento máximo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>