force-app/main/default/objects/HojaEncargo__c/fields/ImporteDesistimientoMinimo__c.field-meta.xml
<CustomField>
    <fullName>ImporteDesistimientoMinimo__c</fullName>
    <label>Importe desistimiento mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>