force-app/main/default/objects/HojaEncargo__c/fields/ImporteDesistimientoUnico__c.field-meta.xml
<CustomField>
    <fullName>ImporteDesistimientoUnico__c</fullName>
    <label>Importe desistimiento único</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>