force-app/main/default/objects/HojaEncargo__c/fields/ImporteGestionesPrevias__c.field-meta.xml
<CustomField>
    <fullName>ImporteGestionesPrevias__c</fullName>
    <label>Importe gestiones previas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>