force-app/main/default/objects/HojaEncargo__c/fields/ImportePresentacionDemanda__c.field-meta.xml
<CustomField>
    <fullName>ImportePresentacionDemanda__c</fullName>
    <label>Importe en la presentación de demanda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>