force-app/main/default/objects/HojaEncargo__c/fields/PDFDatosArriaga__c.field-meta.xml
<CustomField>
    <fullName>PDFDatosArriaga__c</fullName>
    <description>Bloque que contiene los datos de Arriaga que se muestran en el PDF de la hoja de encargo</description>
    <inlineHelpText>Datos de Arriaga , del Cliente y del producto</inlineHelpText>
    <label>Datos de Arriaga</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>