force-app/main/default/objects/HojaEncargo__c/fields/PDFDatosDescuento__c.field-meta.xml
<CustomField>
    <fullName>PDFDatosDescuento__c</fullName>
    <description>Bloque que contiene los datos de Arriaga que se muestran en el PDF de la hoja de encargo</description>
    <label>Datos de Descuento</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>