force-app/main/default/objects/HojaEncargo__c/fields/PDFObjetoEncargo__c.field-meta.xml
<CustomField>
    <fullName>PDFObjetoEncargo__c</fullName>
    <description>Bloque que contiene los datos de Arriaga que se muestran en el PDF de la hoja de encargo</description>
    <label>Objeto de encargo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>