force-app/main/default/objects/HojaEncargo__c/fields/PHAcuerdoExtra__c.field-meta.xml
<CustomField>
    <fullName>PHAcuerdoExtra__c</fullName>
    <description>Honorarios en caso de acuerdo extrajudicial(%)</description>
    <label>Honorarios en caso de acuerdo extrajud %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>