force-app/main/default/objects/HojaEncargo__c/fields/PHRecuperacionDineroOC__c.field-meta.xml
<CustomField>
    <fullName>PHRecuperacionDineroOC__c</fullName>
    <description>onorarios recuperación dinero  otras causas (%). Campo trasladado de la hoja de encargo</description>
    <label>Honorarios recuperacion dinero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>