force-app/main/default/objects/HojaEncargo__c/fields/PHResEstConCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>PHResEstConCondenaCostas__c</fullName>
    <description>Honorarios  resolución estimatoria con condena en costas (%)</description>
    <label>H. res. est. con condena (%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>