force-app/main/default/objects/HojaEncargo__c/fields/PHResEstSinCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>PHResEstSinCondenaCostas__c</fullName>
    <description>Honorarios  resolución estimatoria sin condena en costas (%)</description>
    <label>H. res. est. sin condena</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>