force-app/main/default/objects/HojaEncargo__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto al que hace referencia la hoja de encargo</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Hojas de Encargo</relationshipLabel>
    <relationshipName>HojasEncargo</relationshipName>
    <type>Lookup</type>
</CustomField>