force-app/main/default/objects/HojaEncargo__c/fields/TipoHojaEncargo__c.field-meta.xml
<CustomField>
    <fullName>TipoHojaEncargo__c</fullName>
    <description>Tipo de la hoja de encargo</description>
    <label>Tipo de hoja de encargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Riesgo</fullName>
            </value>
            <value>
                <fullName>Consumidor</fullName>
            </value>
            <value>
                <fullName>No consumidor</fullName>
            </value>
            <value>
                <fullName>Estándar</fullName>
            </value>
            <value>
                <fullName>Acciones Bankia</fullName>
            </value>
            <value>
                <fullName>Con Provisión de Fondos</fullName>
            </value>
            <value>
                <fullName>Sin Provisión de Fondos</fullName>
            </value>
            <value>
                <fullName>Persona Jurídica</fullName>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
            <value>
                <fullName>Con perito</fullName>
            </value>
            <value>
                <fullName>Aportaciones a cuenta Vivienda</fullName>
            </value>
            <value>
                <fullName>Aportaciones a cuenta Vivienda - Diligencias preliminares</fullName>
            </value>
            <value>
                <fullName>HÍBRIDA</fullName>
            </value>
            <value>
                <fullName>NO ÉXITO</fullName>
            </value>
            <value>
                <fullName>Asumiendo Costas</fullName>
            </value>
            <value>
                <fullName>No Asumiendo Costas</fullName>
            </value>
            <value>
                <fullName>Accidentes de Tráfico</fullName>
            </value>
            <value>
                <fullName>Oferta Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>