force-app/main/default/objects/HojaEncargo__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>ExternalId__c</columns>
    <columns>NAME</columns>
    <columns>Producto__c</columns>
    <columns>ImporteGestionesPrevias__c</columns>
    <columns>TipoHojaEncargo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>